# proyectoRA3

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
dags/: polymarket_csgo_pipeline.py
docs/: architecture.md  demo.md
scripts/: init_neon_schema.py  s3_move_yago_into_proyecto_ra2.sh
sql/: schema.sql
src/agent/: langgraph_agent.py
src/datalake/: markers.py  s3_paths.py  write_raw_delta.py
src/dw/: neon.py
src/polymarket/: client.py  snapshot.py
src/transform/: normalize.py
streamlit_app/: app.py
