[project]
name = "proyecto3-polymarket-csgo"
version = "0.1.0"
description = "Proyecto Final: Data Engineering + AI Agents con Polymarket (CSGO)"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.2.0",
  "pyarrow>=14.0.0",
  "deltalake>=0.21.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "langgraph>=0.2.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-ollama>=0.1.0",
  "openai>=1.0.0",
  "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
